--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#social">SOCIAL</a></li>
                 <li>
-                    <a href="#popup">MORE
+                    <a>MORE
                         <i class="fas fa-angle-right"></i>
                     </a>
                     <ul class="subnav">
                         <li><a href="#feature">FEATURE</a></li>
-                        <li><a href="#layout">CONTENT</a></li>
+                        <li><a href="#content">CONTENT</a></li>
                         <li><a href="#contact">CONTACT</a></li>
-                        <li><a href="#footer">FOOTER</a></li>
                     </ul>
                 </li>
             </ul>
@@ -187,7 +186,7 @@
                                 <p class="feature__price-value">
                                     Years
                                 </p>
-                                <a href="#popup" class="btn btn--infor">More</a>
+                                <a href="#content" class="btn btn--infor">More</a>
                             </div>
                         </div>
                     </div>
@@ -219,7 +218,7 @@
                                 <p class="feature__price-value">
                                     Months
                                 </p>
-                                <a href="#popup" class="btn btn--infor">More</a>
+                                <a href="#content" class="btn btn--infor">More</a>
                             </div>
                         </div>
                     </div>
@@ -251,7 +250,7 @@
                                 <p class="feature__price-value">
                                     Months
                                 </p>
-                                <a href="#popup" class="btn btn--infor">More</a>
+                                <a href="#content" class="btn btn--infor">More</a>
                             </div>
                         </div>
                     </div>
@@ -266,47 +265,45 @@
         </section>
 
         <section id="content" class="section-content">
-            <div id="layout" class="layout">
-                <div class="layout-ctn">
-                    <div class="column-item sidebar-one">
-                        <h2>Sidebar one</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                            cupiditate
-                            eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
-                            soluta
-                            neque est beatae? Nobis.
-                        </p>
-                    </div>
-                    <div class="column-item main-column">
-                        <h2>Main column</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                            cupiditate
-                            eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
-                            soluta
-                            neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem
-                            ipsum dolor sit amet.
-                        </p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
+            <div class="layout-ctn">
+                <div class="column-item sidebar-one">
+                    <h2>Sidebar one</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
                         cupiditate
-                        eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima soluta
-                        neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        </p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                            cupiditate
-                            eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
-                            soluta
-                            neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem
-                            ipsum dolor sit amet consectetur.
-                        </p>
-                    </div>
-                    <div class="column-item sidebar-two">
-                        <h2>Sidebar two</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
-                            cupiditate
-                            eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
-                            soluta
-                            neque est beatae? Nobis.Nobis.Lorem ipsum dolor sit amet consectetur adipisicing.
-                        </p>
-                    </div>
+                        eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
+                        soluta
+                        neque est beatae? Nobis.
+                    </p>
+                </div>
+                <div class="column-item main-column">
+                    <h2>Main column</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
+                        cupiditate
+                        eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
+                        soluta
+                        neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem
+                        ipsum dolor sit amet.
+                    </p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
+                    cupiditate
+                    eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima soluta
+                    neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
+                        cupiditate
+                        eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
+                        soluta
+                        neque est beatae? Nobis.Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem
+                        ipsum dolor sit amet consectetur.
+                    </p>
+                </div>
+                <div class="column-item sidebar-two">
+                    <h2>Sidebar two</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad consequuntur architecto sit
+                        cupiditate
+                        eveniet voluptatum sequi ab odit culpa ratione saepe molestiae, maiores blanditiis minima
+                        soluta
+                        neque est beatae? Nobis.Nobis.Lorem ipsum dolor sit amet consectetur adipisicing.
+                    </p>
                 </div>
             </div>
 
@@ -370,6 +367,66 @@
         </section>
 
     </main>
+    <section id="contact" class="section-form">
+
+        <div class="form-left">
+            <form action="" method="POST" class="form" id="form-1">
+                <h3 class="heading">CREATE ACCOUNT</h3>
+                <div class="spacer"></div>
+
+                <div class="form-group">
+                    <label for="fullname" class="form-label">Fullname</label>
+                    <input id="fullname" name="fullname" type="text" placeholder="VD: Van Le" class="form-control">
+                    <span class="form-message"></span>
+                </div>
+
+                <div class="form-group">
+                    <label for="email" class="form-label">Email</label>
+                    <input id="email" name="email" type="text" placeholder="VD: email@domain.com" class="form-control">
+                    <span class="form-message"></span>
+                </div>
+
+                <div class="form-group">
+                    <label for="password" class="form-label">Password</label>
+                    <input id="password" name="password" type="password" placeholder="Enter password"
+                        class="form-control">
+                    <span class="form-message"></span>
+                </div>
+
+                <div class="form-group">
+                    <label for="password_confirmation" class="form-label">Confirm password</label>
+                    <input id="password_confirmation" name="password_confirmation" placeholder="Enter password again"
+                        type="password" class="form-control">
+                    <span class="form-message"></span>
+                </div>
+
+                <button onclick="showErrorToast();" class="form-submit">CREATE</button>
+            </form>
+
+        </div>
+        <div class="form-right">
+            <form action="" method="POST" class="form" id="form-2">
+                <h3 class="heading">SIGN IN</h3>
+                <div class="spacer"></div>
+
+                <div class="form-group">
+                    <label for="email" class="form-label">Email</label>
+                    <input id="email" name="email" type="text" placeholder="VD: email@domain.com" class="form-control">
+                    <span class="form-message"></span>
+                </div>
+
+                <div class="form-group">
+                    <label for="password" class="form-label">Password</label>
+                    <input id="password" name="password" type="password" placeholder="Enter password"
+                        class="form-control">
+                    <span class="form-message"></span>
+                </div>
+
+                <button onclick="showErrorToast();" class="form-submit">SIGN IN</button>
+            </form>
+        </div>
+
+    </section>
 
     <footer id="footer" class="footer">
         <div class="footer__logo-box">
@@ -400,27 +457,6 @@
             </p>
         </div>
     </footer>
-
-    <div class="popup" id="popup">
-        <div class="popup__content">
-            <div class="popup__left">
-                <img src="img/box1.jpg" alt="Tour photo" class="popup__img">
-            </div>
-            <div class="popup__right">
-                <a href="#section-skills" class="popup__close">&times;</a>
-                <h2 class="heading-secondary u-margin-bottom-small">Information</h2>
-                <h3 class="heading-summary u-margin-bottom-small">Intruduction</h3>
-                <p class="popup__text">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, ratione dolorum?
-                    Dicta quam voluptas ipsum obcaecati laborum mollitia distinctio. Earum quisquam
-                    esse est vel aperiam quis quidem commodi voluptatem voluptatum! Magnam quod quis
-                    sed fugiat quas. At vel dolorem, officia, rerum tenetur aspernatur, itaque maiores laudantium
-                    voluptas
-                </p>
-                <a href="#" class="button button--dark">Contact now</a>
-            </div>
-        </div>
-    </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
